fix: Доработка правил

--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -228,6 +228,8 @@
                             <p class="text-xl pl-20">• Пытаться отбиваться от защитников в случае его обнаружения и получения первого урона в целях отступления, но не инициировать нападение первым.</p>
                             <p class="text-xl pl-16 text-lh-primary font-bold"><span class="font-bold">3.1.4</span> Вор обязан:</p>
                             <p class="text-xl pl-20">• Производить грабеж только тогда, когда на территории цели есть человек в сети (для одиночек, пар, групп, гильдий - 1 человек, для всех остальных минимум 2).</p>
+                            <p class="text-xl pl-20">• Для одиночек и пар и всех не зарегистрированных селений - на месте вашего проживания должно стоять табличка с надписью дом или вашим ником. Если такой таблички нет, вас могу ограбить как угодно и когда угодно.</p>
+                            <p class="text-xl pl-20">• Для одиночек и пар и всех не зарегистрированных селений, территорией считать местность от таблички радиусом 150 блоков в каждую сторону.</p>
                         </div>
                     </tui-expand>
                 </div>
@@ -239,7 +241,7 @@
                     </div>
                     <tui-expand [expanded]="isKills">
                         <div class="flex flex-col gap-2">
-                            <p class="text-xl pl-16"><span class="font-bold">3.2.1</span> Игроки категорий (одиночки, пары, группы), (гильдии) могут быть убиты, где угодно, как угодно, когда угодно и кем угодно.</p>
+                            <p class="text-xl pl-16"><span class="font-bold">3.2.1</span> Игроки категорий (одиночки, пары, группы), (гильдии) могут быть убиты, где угодно, как угодно, когда угодно и кем угодно. Однако следует помнить, что если вы убиваете - вы не можете красть, так как не попадаете под правила воровства.</p>
                             <p class="text-xl pl-16"><span class="font-bold">3.2.2</span> Игроки категорий (община, город, региональная провинция) могут быть убиты, где угодно, как угодно, когда угодно и кем угодно, кроме своей территории и в радиусе 50/150/300 блоков от ее границ соответственно. Не действует в случаях состояния набег и война.</p>
                         </div>
                     </tui-expand>
