fix: Доработка правил

--- a/last-hearth-landing/src/app/market/market.component.html
+++ b/last-hearth-landing/src/app/market/market.component.html
@@ -4,9 +4,16 @@
     <div>
         <p class="text-2xl text-lh-primary font-bold">Валюта и политика рынка Короны</p>
         <p class="text-xl pl-4">
-            Текст с основной информацией про монеты, ценообразование, возможность инфляции, виды рынков, открытие
-            доступов к ним, а также про возможность запросов на выставление товаров.
+            • Рынки короны - специальные торгоматы для продажи или покупки товаров Короны за валюту Короны. Основным и
+            главным рынком является ряд торговых домов на территории спавна.
         </p>
+        <p class="text-xl pl-4">• Валютой Короны являются монеты номиналом: медный, серебряный, золотой.</p>
+        <p class="text-xl pl-4">• 1 серебряный = 50 медных. 1 золотой = 60 серебряных.</p>
+        <p class="text-xl pl-4">• Корона оставляет за собой право регулировать ценообразование.</p>
+        <p class="text-xl pl-4">
+            • При недостатке видов товаров, предоставляемых Короной можно обратиться к представителю Короны.
+        </p>
+        <p class="text-xl pl-4">• Корона предоставляет доступ к разным типам рынков.</p>
     </div>
 
     @for (item of data; track $index) {
