--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -185,7 +185,7 @@
                                 <p class="text-xl pl-20">• Тропы, соединяющие все постройки селения.</p>
                                 <p class="text-xl pl-20">• Установка монумента (вычизленный столб 1х1х3 (ш,д,в)).</p>
                                 <p class="text-xl pl-20">
-                                    • Селение должно находиться не далее 3000 блоков от спавна (расстояние может быть
+                                    • Селение должно находиться не далее N тысяч блоков от спавна (расстояние может быть
                                     изменено в зависимости от конфигурации карты).
                                 </p>
                                 <p class="text-xl pl-20">• Держание ответа за взятый политический курс.</p>
