--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -1148,12 +1148,15 @@
                     образование.
                 </p>
                 <p class="text-xl pl-8">
-                    <span class="font-bold">12.5</span> Запрещено оскорбление администрации в любых его проявлениях.
+                    <span class="font-bold">12.5</span> Протекторат от короны - непререкаемый и перманентный протекторат, запрещающий любые военные и воровские действия на территорию данную преимуществами.
+                </p>
+                <p class="text-xl pl-8">
+                    <span class="font-bold">12.6</span> Запрещено оскорбление администрации в любых его проявлениях.
                     Соблюдайте вежливость, и та же вежливость вернется к вам. В случае нарушения, администрация в праве
                     выдать мут на подумать. В случае злостного нарушения – бан.
                 </p>
                 <p class="text-xl pl-8">
-                    <span class="font-bold">12.6</span> Для людей с титулом запрещено приватить любые оборонительные
+                    <span class="font-bold">12.7</span> Для людей с титулом запрещено приватить любые оборонительные
                     постройки и входы в них, а так же входы в любые помещения. Так же запрещается приват монумента.
                     Запрещено хранение более 30% имеющихся ресурсов селения/или игрока если он соло, внутри привата.
                 </p>
