--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -624,7 +624,7 @@
                             </p>
                             <p class="text-xl pl-20">• Разбивать и открывать категорически только:</p>
                             <p class="text-xl pl-24">
-                                ◦ Разбивать двери (не являющиеся воротами - см. терминологию) и люки. Открывание
+                                ◦ Разбивать двери (не являющиеся воротами - см. п.12) и люки. Открывание
                                 незапертых ворот разрешено.
                             </p>
                             <p class="text-xl pl-24">
@@ -635,7 +635,7 @@
                                 ◦ Сундуки, ящики, сосуды, бочки, корзинки, глыбы камня (из мода "Карьер").
                             </p>
                             <p class="text-xl pl-20">• Угонять любые транспортные средства.</p>
-                            <p class="text-xl pl-20">• Размещать исключительно веревочные лестницы.</p>
+                            <p class="text-xl pl-20">• Размещать исключительно веревочные лестницы. (Согласно правилам размещения лестниц в п.6.4)</p>
                             <p class="text-xl pl-20">
                                 • Во время грабежа вор может быть защищен исключительно кожаной или стеганой броней.
                                 Наличие брони не является обязательным.
@@ -891,7 +891,7 @@
                                 • Деревянных лестниц (на строения являющимися оборонными и рукотворными, не превышающие
                                 в высоту 12-ти блоков.), при этом нельзя ставить деревянные лестницы находясь в воде, а
                                 также ставить лестницу "навесу", подставляя ее под себя и не прикрепляя к боковой
-                                поверхности.
+                                поверхности. Веревочных лестниц, используя ванильную механику их установки.
                             </p>
                             <p class="text-xl pl-20">
                                 • Специально вычизленных осадных машин и сооружений, которые можно ставить только вне
