--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -659,6 +659,9 @@
                                 • Вор имеет право доводить до конца уже начатый грабеж, если в процессе цель вышла из
                                 сети.
                             </p>
+                            <p class="text-xl pl-20">
+                                • Вору запрещается использовать любой инструмент чизла на чужой территории и в процессе воровства.
+                            </p>
                         </div>
                     </tui-expand>
                 </div>
