fix: Доработка номер 5

--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -213,7 +213,7 @@
                                 <p class="text-xl pl-16 text-lh-primary font-bold">Преимущества:</p>
                                 <p class="text-xl pl-20">
                                     • Защита на территории селения от действий других игроков (п.3), в радиусе 100
-                                    блоков от монумента. За исключением состояний: воровство, набег, война.
+                                    блоков от монумента (по высоте и глубине не ограничено). За исключением состояний: воровство, набег, война.
                                 </p>
                                 <p class="text-xl pl-20">• Возможность объявлять набеги.</p>
                                 <p class="text-xl pl-20">• Доступ к дополнительным рынкам на спавне.</p>
@@ -278,7 +278,7 @@
                                 <p class="text-xl pl-16 text-lh-primary font-bold">Преимущества:</p>
                                 <p class="text-xl pl-20">
                                     • Защита на территории города от действий других игроков (п.3), в радиусе 220 блоков
-                                    от монумента. За исключением состояний: воровство, набег, война.
+                                    от монумента (по высоте и глубине не ограничено). За исключением состояний: воровство, набег, война.
                                 </p>
                                 <p class="text-xl pl-20">
                                     • Возможность размещения 4 торговцев в городе (2 случайных и 2 на выбор).
@@ -357,7 +357,7 @@
                                 <p class="text-xl pl-16 text-lh-primary font-bold">Преимущества:</p>
                                 <p class="text-xl pl-20">
                                     • Защита на территории провинции от действий других игроков (п.3), в радиусе 450
-                                    блоков от монумента. За исключением состояний: воровство, набег, война.
+                                    блоков от монумента (по высоте и глубине не ограничено). За исключением состояний: воровство, набег, война.
                                 </p>
                                 <p class="text-xl pl-20">
                                     • Возможность размещения дополнительно 6 торговцев на выбор.
@@ -400,6 +400,7 @@
                                     столбиками или буйками (на воде) (размерами не менее 1х1х2 (ш,д,в)), отличными от
                                     окружающего их ландшафта, на расстоянии не более 20 блоков друг от друга.
                                 </p>
+                                <p class="text-xl pl-20">• Установка монумента (вычизленный столб 1х1х3 (ш,д,в)).</p>
                                 <p class="text-xl pl-20">
                                     • Наличие построенного главного здания гильдии высотой не менее 2 этажей.
                                 </p>
@@ -423,7 +424,7 @@
                                 <p class="text-xl pl-16 text-lh-primary font-bold">Преимущества:</p>
                                 <p class="text-xl pl-20">
                                     • Защита на территории гильдии от действий других игроков (п.3), в радиусе 80 блоков
-                                    от монумента. За исключением состояний: воровство, набег, война.
+                                    от монумента (по высоте и глубине не ограничено). За исключением состояний: воровство, набег, война.
                                 </p>
                                 <p class="text-xl pl-20">• Возможность размещения 4 торговцев на выбор.</p>
                                 <p class="text-xl pl-20">• Доступ к уникальным рынкам короны на спавне.</p>
@@ -490,7 +491,7 @@
                                 <p class="text-xl pl-16 text-lh-primary font-bold">Преимущества:</p>
                                 <p class="text-xl pl-20">
                                     • Защита на территории гильдии от действий других игроков (п.3), в радиусе 100
-                                    блоков от монумента. За исключением состояний: воровство, набег, война.
+                                    блоков от монумента (по высоте и глубине не ограничено). За исключением состояний: воровство, набег, война.
                                 </p>
                                 <p class="text-xl pl-20">
                                     • Возможность размещения дополнительно 6 торговцев на выбор.
@@ -538,6 +539,7 @@
                                     столбиками или буйками (на воде) (размерами не менее 1х1х2 (ш,д,в)), отличными от
                                     окружающего их ландшафта, на расстоянии не более 20 блоков друг от друга.
                                 </p>
+                                <p class="text-xl pl-20">• Установка монумента (вычизленный столб 1х1х3 (ш,д,в)).</p>
                                 <p class="text-xl pl-20">
                                     • Запрет на использование сложных производственных цепочек и любой автоматизации.
                                 </p>
@@ -556,7 +558,7 @@
                                 <p class="text-xl pl-16 text-lh-primary font-bold">Преимущества:</p>
                                 <p class="text-xl pl-20">
                                     • Защита на территории гильдии от действий других игроков (п.3), в радиусе 50 блоков
-                                    от монумента. За исключением состояний: воровство, набег, война.
+                                    от монумента (по высоте и глубине не ограничено). За исключением состояний: воровство, набег, война.
                                 </p>
                                 <p class="text-xl pl-20">
                                     • Единовременное безвозмездное военное снабжение от Короны (включая вапити и
