fix: Доработка правил

--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -47,8 +47,7 @@
                     правилами, таких как: совершение краж, проведение набегов или ведение военных действий.
                 </p>
                 <p class="text-xl pl-4">
-                    <span class="font-bold">1.9</span> Запрещается использование лавы в любых формах и при любых
-                    обстоятельствах.
+                    <span class="font-bold">1.9</span> Запрещается использование лавы в любых формах за исключением декораций, которые ни при каких условия не должны мешать игровому процессу и/или деятельности игроков.
                 </p>
                 <p class="text-xl pl-4">
                     <span class="font-bold">1.10</span> Запрещено использование любых программ, эксплойтов, багов или
@@ -210,6 +209,7 @@
                                 <p class="text-xl pl-20">
                                     • Публикация статьи о регистрации общины в специальном канале Discord.
                                 </p>
+                                <p class="text-xl pl-20">• Актуализация информации об участниках селения, которые заходят в игру (не реже одного раза в 10 дней.) Временные наемные работники также включаются в анкету, с предоставлением подтверждения оплаты их труда, но их численность не учитывается при выполнении требований или преимуществ (численность наемных работников УЧИТЫВАЕТСЯ при состоянии воровство/набег/война).</p>
                                 <p class="text-xl pl-16 text-lh-primary font-bold">Преимущества:</p>
                                 <p class="text-xl pl-20">
                                     • Защита на территории селения от действий других игроков (п.3), в радиусе 100
@@ -275,6 +275,7 @@
                                 </p>
                                 <p class="text-xl pl-20">• Уплата денежных податей короне раз в реальную неделю.</p>
                                 <p class="text-xl pl-20">• Переоформление статьи регистрации селения в дискорде.</p>
+                                <p class="text-xl pl-20">• Актуализация информации об участниках селения, которые заходят в игру (не реже одного раза в 10 дней.) Временные наемные работники также включаются в анкету, с предоставлением подтверждения оплаты их труда, но их численность не учитывается при выполнении требований или преимуществ (численность наемных работников УЧИТЫВАЕТСЯ при состоянии воровство/набег/война).</p>
                                 <p class="text-xl pl-16 text-lh-primary font-bold">Преимущества:</p>
                                 <p class="text-xl pl-20">
                                     • Защита на территории города от действий других игроков (п.3), в радиусе 220 блоков
@@ -354,6 +355,7 @@
                                 <p class="text-xl pl-20">
                                     • Переоформление статьи о регистрации провинции в специальном канале Discord.
                                 </p>
+                                <p class="text-xl pl-20">• Актуализация информации об участниках селения, которые заходят в игру (не реже одного раза в 10 дней.) Временные наемные работники также включаются в анкету, с предоставлением подтверждения оплаты их труда, но их численность не учитывается при выполнении требований или преимуществ (численность наемных работников УЧИТЫВАЕТСЯ при состоянии воровство/набег/война).</p>
                                 <p class="text-xl pl-16 text-lh-primary font-bold">Преимущества:</p>
                                 <p class="text-xl pl-20">
                                     • Защита на территории провинции от действий других игроков (п.3), в радиусе 450
@@ -395,6 +397,7 @@
                                     в специальном канале Discord и соответствующее следующим требованиям:
                                 </p>
                                 <p class="text-xl pl-16 text-lh-primary font-bold">Требования к образованию:</p>
+                                <p class="text-xl pl-20">• Актуализация информации об участниках селения, которые заходят в игру (не реже одного раза в 10 дней.) Временные наемные работники также включаются в анкету, с предоставлением подтверждения оплаты их труда, но их численность не учитывается при выполнении требований или преимуществ (численность наемных работников УЧИТЫВАЕТСЯ при состоянии воровство/набег/война).</p>
                                 <p class="text-xl pl-20">
                                     • Обустроенные границы территории гильдии, данные преимуществом, пограничными
                                     столбиками или буйками (на воде) (размерами не менее 1х1х2 (ш,д,в)), отличными от
@@ -463,6 +466,7 @@
                                 <p class="text-xl pl-20">
                                     • Успешное прохождение и сохранение стадии "Гильдия торговцев 1 уровня".
                                 </p>
+                                <p class="text-xl pl-20">• Актуализация информации об участниках селения, которые заходят в игру (не реже одного раза в 10 дней.) Временные наемные работники также включаются в анкету, с предоставлением подтверждения оплаты их труда, но их численность не учитывается при выполнении требований или преимуществ (численность наемных работников УЧИТЫВАЕТСЯ при состоянии воровство/набег/война).</p>
                                 <p class="text-xl pl-20">
                                     • Изменение расположения обустроенных границ, согласно новым преимуществам.
                                 </p>
@@ -539,6 +543,7 @@
                                     столбиками или буйками (на воде) (размерами не менее 1х1х2 (ш,д,в)), отличными от
                                     окружающего их ландшафта, на расстоянии не более 20 блоков друг от друга.
                                 </p>
+                                <p class="text-xl pl-20">• Актуализация информации об участниках селения, которые заходят в игру (не реже одного раза в 10 дней.) Временные наемные работники также включаются в анкету, с предоставлением подтверждения оплаты их труда, но их численность не учитывается при выполнении требований или преимуществ (численность наемных работников УЧИТЫВАЕТСЯ при состоянии воровство/набег/война).</p>
                                 <p class="text-xl pl-20">• Установка монумента (вычизленный столб 1х1х3 (ш,д,в)).</p>
                                 <p class="text-xl pl-20">
                                     • Запрет на использование сложных производственных цепочек и любой автоматизации.
@@ -802,8 +807,8 @@
                                 намека (который нельзя истолковать иначе);
                             </p>
                             <p class="text-xl pl-16">
-                                • Время возможности совершить “набег” не должно превышать 3-х часов реального времени
-                                после совершения объявления за исключением ночи по МСК (с 22:30 и по 8:00 утра “набег”
+                                • Время возможности начать “набег” не должно превышать 3-х часов реального времени
+                                после объявления о нем, за исключением ночи по МСК (с 22:30 и по 8:00 утра “набег”
                                 запрещается);
                             </p>
                             <p class="text-xl pl-16">
@@ -838,15 +843,15 @@
                             <p class="text-xl pl-16">
                                 • Запрещается прятать ресурсы в места, которые допускают «обход» защиты и никоем образом
                                 не предполагают хранение в них ресурсов. Например: закапывать сундуки и сосуды под землю
-                                наглухо; замуровывать в стены наглухо; и т.д. К хранилищам ресурсов должен быть доступ
+                                наглухо; замуровывать в стены наглухо; прятать в чизельные сундуки, которые сливаются с ландшафтом вне построек и т.д. К хранилищам ресурсов должен быть доступ
                                 прямой видимости.
                             </p>
                             <p class="text-xl pl-16">
-                                • Запрещается ставить любые блоки позволяющие создать преимущество во время набега,
+                                • Запрещается ставить любые блоки и объекты позволяющие создать преимущество во время набега,
                                 когда противник находится уже вблизи 50 блоков, за исключением:
                             </p>
                             <p class="text-xl pl-20">
-                                • Специально вычизленных баррикад размером, не превышающим 2 блока в высоту.
+                                • Специально вычизленных баррикад размером, не превышающим 2 блока в высоту (запрещается установка для прямого блокирования бойниц и их проявлений).
                             </p>
                             <p class="text-xl pl-20">
                                 • Сыпучих материалов, которые можно размещать, только осыпая сверху с заранее
@@ -871,6 +876,12 @@
                             <p class="text-xl pl-16">
                                 • Запрещается прятать ресурсы в объектах торговли. (торгоматы/кассы и т.п.)
                             </p>
+                            <p class="text-xl pl-16">
+                                • Запрещается использовать непроходимую (абьюзную) оборону. Например: Тоннели - жаровни. (Оценивается администрацией)
+                            </p>
+                            <p class="text-xl pl-16">
+                                • Запрещается создавать не засыпаемые рвы.
+                            </p>
                         </div>
                     </tui-expand>
                 </div>
@@ -889,6 +900,18 @@
                     </div>
                     <tui-expand [expanded]="isRaid4">
                         <div class="flex flex-col gap-2">
+                            <p class="text-xl pl-16">
+                                • Атакующие обязаны перед нападением соорудить небольшой лагерь, не более 20x20 блоков. Лагерь обязан быть расположен не ближе чем в 100 блоках от территории на которую противник претендует. (Если возможности установить лагерь нет (море), атакующим разрешается разбить свой лагерь сразу же на побережье, либо на созданной песчаной насыпи).
+                            </p>
+                            <p class="text-xl pl-16">
+                                • Атакующие обязаны установить в лагере монумент 1x1x2 (ш, д, в).
+                            </p>
+                            <p class="text-xl pl-16">
+                                • Атакующие обязаны использовать темпоральные шестеренки исключительно внутри своего лагеря.
+                            </p>
+                            <p class="text-xl pl-16">
+                                • Атакующие обязаны признать поражение и прекратить набег, как только будет разрушен монумент в лагере.
+                            </p>
                             <p class="text-xl pl-16">
                                 • Атакующим запрещается установка любых блоков во время нападения, за исключением:
                             </p>
@@ -925,6 +948,9 @@
                             </p>
                             <p class="text-xl pl-16">
                                 • Крепостных стен (подразумеваются внешние стены огораживающие основные постройки).
+                            </p>
+                            <p class="text-xl pl-16">
+                                • Плетеного и деревянного забора; каменного забора не превышающего высоту 1 блока.
                             </p>
                             <p class="text-xl pl-20">• Крепостные стены разрешается ломать только в местах пролома.</p>
                             <p class="text-xl pl-24">
@@ -1156,12 +1182,15 @@
                     <span class="font-bold">12.5</span> Протекторат от короны - непререкаемый и перманентный протекторат, запрещающий любые военные и воровские действия на территорию данную преимуществами.
                 </p>
                 <p class="text-xl pl-8">
-                    <span class="font-bold">12.6</span> Запрещено оскорбление администрации в любых его проявлениях.
+                    <span class="font-bold">12.6</span> Воротами являются двери размером от 3-х блоков шириной и 3-х блоков высотой.
+                </p>
+                <p class="text-xl pl-8">
+                    <span class="font-bold">12.7</span> Запрещено оскорбление администрации в любых его проявлениях.
                     Соблюдайте вежливость, и та же вежливость вернется к вам. В случае нарушения, администрация в праве
                     выдать мут на подумать. В случае злостного нарушения – бан.
                 </p>
                 <p class="text-xl pl-8">
-                    <span class="font-bold">12.7</span> Для людей с титулом запрещено приватить любые оборонительные
+                    <span class="font-bold">12.8</span> Для людей с титулом запрещено приватить любые оборонительные
                     постройки и входы в них, а так же входы в любые помещения. Так же запрещается приват монумента.
                     Запрещено хранение более 30% имеющихся ресурсов селения/или игрока если он соло, внутри привата.
                 </p>
